Fixed layout problem hopefully

--- a/_includes/css/stylesheet.css
+++ b/_includes/css/stylesheet.css
@@ -80,7 +80,6 @@ footer {
     font-size: 0.8em;
     width: 100%;
     background: #30303B;
-    height: 15px;
     padding: 10px 0;
     color: #DDD;
     text-align: center;
